  instead of a home-baked re-implementation of (parts of)
  utils::capture.output(), which is also a more compact solution in
  terms of lines of code in dplR.  See Henrik Bengtsson's notes at
  http://www.jottr.org/2014/05/captureOutput.html (referenced on
  2015-01-07).

File: net.R
-----------

- New function for computing the NET parameter (Esper et al., 2001).

* CHANGES IN dplR VERSION 1.6.2

No functional changes.  A unit test was changed so it would not fail
on the solaris-sparc CRAN platform.  Also in some other tests,
identicality checks were replaced with near equality checks.


* CHANGES IN dplR VERSION 1.6.1


File: glk.R and glk.Rd
-------------
- Modified by Christian Zang in response to a bug report by Allan Buras. In the
  case of no change from year i to year i+1 in both series then the glk sign
  will for both be 0 and the sum of both is then also 0 and will not be
  accounted for correctly in the sum of synchronous years. Zang and Buras have
  patched and Zang updated the help file to reflect the change as:
  "This implementation improves the original formulation inasmuch as the case
  of neighbouring identical measurements in the same years is accounted for.
  Here, it is treated as full agreement, in contrast to only partial agreement
  in the original formulation."

File: crn.plot.R
-------------

- Removed automatic plotting of chronology name in main title.


File: plot.wavelet.R
-------------

- Fixed small bug in ylim for the chronology in the plot.

File: NAMESPACE
---------------

- Added rasterPlot, latexify() and latexDate() to export list
- Import readPNG from png.
- Import more functions from grid.
- Import stri_trans_nfc from stringi.

File: DESCRIPTION
-----------------

- New Suggested packages: Biobase, dichromat, knitr, tikzDevice,
  RColorBrewer. Of these, dichromat, knitr, and tikzDevice are for document
  building (see math-dplR.pdf below).  Biobase is for making access to