@@ -6,7 +6,7 @@
 }
 \usage{
 read.tucson(fname, header = NULL, long = FALSE,
-            encoding = getOption("encoding"))
+            encoding = getOption("encoding"), edge.zeros = TRUE)
 }
 \arguments{
   \item{fname}{ a \code{character} vector giving the file name of the
@@ -26,6 +26,10 @@ read.tucson(fname, header = NULL, long = FALSE,
     problem.  Examples of popular encodings available on many systems
     are \code{"ASCII"}, \code{"UTF-8"}, and \code{"latin1"} alias
     \code{"ISO-8859-1"}.  See the help of \code{\link{file}}. }
+  \item{edge.zeros}{ \code{logical} flag indicating whether leading or
+    trailing zeros in series will be preserved (when the flag is
+    \code{TRUE}, the default) or discarded, i.e. marked as \code{NA}
+    (when \code{FALSE}). }
 }
 \details{
   This reads in a standard rwl file as defined according to the
